# serial-bridge

./: README.md  test-client.html
node-serial-bridge/: README.md  index.js  package-lock.json  package.json
rust-serial-bridge/: Cargo.toml  README.md
rust-serial-bridge/src/: main.rs
